Replace `Collectors.toList()` with `toList()` in ConsentPageControllerView